[gd_scene load_steps=7 format=2]

[ext_resource path="res://TestBed.gd" type="Script" id=1]
[ext_resource path="res://chips/nand/NAND.tscn" type="PackedScene" id=2]
[ext_resource path="res://chips/not/NOT.tscn" type="PackedScene" id=3]
[ext_resource path="res://chips/and/AND.tscn" type="PackedScene" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

func _ready():
	run()
	
func run():
	$Output.text = String($NOT.apply($Input.pressed))
	
func _on_input_pressed():
	run()
"

[sub_resource type="GDScript" id=2]
script/source = "extends Node2D

func _ready():
	run()
	
func run():
	$Output.text = String($AND.apply($InputA.pressed, $InputB.pressed))
	
func _on_input_pressed():
	run()
"

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="NAND" parent="." instance=ExtResource( 2 )]
margin_left = 90.0
margin_top = 40.0
margin_right = 150.0
margin_bottom = 90.0

[node name="InputA" type="CheckBox" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 57.0
margin_bottom = 44.0
text = "A"

[node name="InputB" type="CheckBox" parent="."]
margin_left = 20.0
margin_top = 83.5628
margin_right = 57.0
margin_bottom = 107.563
text = "B"

[node name="Output" type="Label" parent="."]
margin_left = 190.0
margin_top = 60.0
margin_right = 235.0
margin_bottom = 74.0
text = "Output"

[node name="NOT" type="Node2D" parent="."]
position = Vector2( 20, 160 )
script = SubResource( 1 )

[node name="Input" type="CheckBox" parent="NOT"]
margin_right = 37.0
margin_bottom = 24.0
text = "A"

[node name="NOT" parent="NOT" instance=ExtResource( 3 )]
margin_left = 70.0
margin_top = -10.0
margin_right = 110.0
margin_bottom = 30.0

[node name="Output" type="Label" parent="NOT"]
margin_left = 170.0
margin_top = 3.0
margin_right = 215.0
margin_bottom = 17.0
text = "Output"

[node name="AND" type="Node2D" parent="."]
position = Vector2( 20, 260 )
script = SubResource( 2 )

[node name="InputA" type="CheckBox" parent="AND"]
margin_right = 37.0
margin_bottom = 24.0
text = "A"

[node name="InputB" type="CheckBox" parent="AND"]
margin_top = 60.0
margin_right = 37.0
margin_bottom = 84.0
text = "B"

[node name="Output" type="Label" parent="AND"]
margin_left = 170.0
margin_top = 24.0
margin_right = 215.0
margin_bottom = 38.0
text = "Output"

[node name="AND" parent="AND" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 10.0
margin_right = 120.0
margin_bottom = 60.0
[connection signal="pressed" from="InputA" to="." method="_on_input_pressed"]
[connection signal="pressed" from="InputB" to="." method="_on_input_pressed"]
[connection signal="pressed" from="NOT/Input" to="NOT" method="_on_input_pressed"]
[connection signal="pressed" from="AND/InputA" to="AND" method="_on_input_pressed"]
[connection signal="pressed" from="AND/InputB" to="AND" method="_on_input_pressed"]
